Bug 409381 - gif images (with transparency) display corrupted.  p=swsnyder@insightbb.com, r,sr=vlad, a=blocking-1.9+